--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -1,12 +1,243 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "code and markdowns"
+    "# BEE 4750 Final Project\n",
+    "\n",
+    "Team Members: Bailey Belinger (bcb87), Camila Monter (cm755), Priya Shah (ps742)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "  \u001b[90m[1862ce21] \u001b[39m\u001b[92m+ MarkdownTables v1.1.0\u001b[39m\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/bee4750/l3bc-final-project/Manifest.toml`\n",
+      "  \u001b[90m[dce04be8] \u001b[39m\u001b[92m+ ArgCheck v2.3.0\u001b[39m\n",
+      "  \u001b[90m[0b91fe84] \u001b[39m\u001b[92m+ DisplayAs v0.1.6\u001b[39m\n",
+      "  \u001b[90m[1862ce21] \u001b[39m\u001b[92m+ MarkdownTables v1.1.0\u001b[39m\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "  \u001b[90m[37e2e46d] \u001b[39m\u001b[92m+ LinearAlgebra\u001b[39m\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling HiGHS [87dc4568-4c63-4d18-b0c0-bb2238e4078b]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule MathOptInterface with build ID fafbfcfd-e67b-f785-000d-bef0d4fcc765 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean MathOptInterface [b8f27783-ece8-5eb3-8dc8-9495eed66fee] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing HiGHS [87dc4568-4c63-4d18-b0c0-bb2238e4078b].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling SpecialFunctionsExt [997ecda8-951a-5f50-90ea-61382e97704b]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling FFMPEG [c87230d0-a227-11e9-1b43-d7ebe4e7570a]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing FFMPEG [c87230d0-a227-11e9-1b43-d7ebe4e7570a].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling FFMPEG_jll [b22a6f82-2f65-5046-a5b2-351ab43fb4e5]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing FFMPEG_jll [b22a6f82-2f65-5046-a5b2-351ab43fb4e5].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling libass_jll [0ac62f75-1d6f-5e53-bd7c-93b484bb37c0]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing libass_jll [0ac62f75-1d6f-5e53-bd7c-93b484bb37c0].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling FreeType2_jll [d7e528f0-a631-5988-bf34-fe36492bcfd7]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing FreeType2_jll [d7e528f0-a631-5988-bf34-fe36492bcfd7].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling HarfBuzz_jll [2e76f6c2-a576-52d4-95c1-20adfe4de566]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule FreeType2_jll with build ID ffffffff-ffff-ffff-000d-bf4640fc6b05 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean FreeType2_jll [d7e528f0-a631-5988-bf34-fe36492bcfd7] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing HarfBuzz_jll [2e76f6c2-a576-52d4-95c1-20adfe4de566].\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m Cairo_jll\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mXSLT_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mCairo_jll\u001b[39m\n",
+      "  2 dependencies successfully precompiled in 3 seconds. 30 already precompiled.\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Cairo_jll [83423d85-b0ee-5818-9007-b63ccbeb887a]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule FreeType2_jll with build ID ffffffff-ffff-ffff-000d-bf4640fc6b05 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean FreeType2_jll [d7e528f0-a631-5988-bf34-fe36492bcfd7] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing Cairo_jll [83423d85-b0ee-5818-9007-b63ccbeb887a].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Fontconfig_jll [a3f928ae-7b40-5064-980b-68af3947d34b]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule FreeType2_jll with build ID ffffffff-ffff-ffff-000d-bf4640fc6b05 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean FreeType2_jll [d7e528f0-a631-5988-bf34-fe36492bcfd7] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing Fontconfig_jll [a3f928ae-7b40-5064-980b-68af3947d34b].\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m GR\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mXSLT_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mQt6Base_jll\u001b[39m\n",
+      "\u001b[33m  ✓ \u001b[39m\u001b[90mCairo_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mQt6ShaderTools_jll\u001b[39m\n",
+      "\u001b[33m  ✓ \u001b[39m\u001b[90mHarfBuzz_jll\u001b[39m\n",
+      "\u001b[33m  ✓ \u001b[39m\u001b[90mlibass_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mPango_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mQt6Declarative_jll\u001b[39m\n",
+      "\u001b[33m  ✓ \u001b[39m\u001b[90mFFMPEG_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mGR_jll\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mGR\u001b[39m\n",
+      "  11 dependencies successfully precompiled in 8 seconds. 93 already precompiled.\n",
+      "  \u001b[33m4\u001b[39m dependencies precompiled but different versions are currently loaded. Restart julia to access the new versions\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GR [28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[91m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[91m\u001b[1mError: \u001b[22m\u001b[39mimport GR_jll failed.\n",
+      "\u001b[91m\u001b[1m│ \u001b[22m\u001b[39mConsider using `GR.GRPreferences.use_jll_binary()` or\n",
+      "\u001b[91m\u001b[1m│ \u001b[22m\u001b[39m`GR.GRPreferences.use_upstream_binary()` to repair.\n",
+      "\u001b[91m\u001b[1m│ \u001b[22m\u001b[39mImporting GR a second time will allow use of these functions.\n",
+      "\u001b[91m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ GR.GRPreferences ~/.julia/packages/GR/gANAX/src/preferences.jl:8\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing GR [28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GR_jll [d2c73de3-f751-5644-a686-071e5b155ba9]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Bzip2_jll with build ID fafbfcfd-db50-209b-000d-bef424e1d835 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Bzip2_jll [6e34b625-4abd-537c-b88f-471c36dfa7a0] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing GR_jll [d2c73de3-f751-5644-a686-071e5b155ba9].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling JpegTurbo_jll [aacddb02-875f-59d6-b918-886e6ef4fbf8]\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m Libtiff_jll\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mLibtiff_jll\u001b[39m\n",
+      "  1 dependency successfully precompiled in 1 seconds. 7 already precompiled.\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Libtiff_jll [89763e89-9b03-5906-acba-b20f662cd828]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule JpegTurbo_jll with build ID fafbfcfd-dcb0-a2bd-000d-bf4b431e8a0a is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean JpegTurbo_jll [aacddb02-875f-59d6-b918-886e6ef4fbf8] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing Libtiff_jll [89763e89-9b03-5906-acba-b20f662cd828].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling LERC_jll [88015f11-f218-50d7-93a8-a6af411a945d]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling XZ_jll [ffd25f8a-64ca-5728-b0f7-c24cf3aae800]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Zstd_jll [3161d3a3-bdf6-5164-811a-617609db77b4]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Qt6Base_jll [c0090381-4147-56d7-9ebc-da0b1113ec56]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Fontconfig_jll with build ID ffffffff-ffff-ffff-000d-bf489e590750 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Fontconfig_jll [a3f928ae-7b40-5064-980b-68af3947d34b] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing Qt6Base_jll [c0090381-4147-56d7-9ebc-da0b1113ec56].\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling IJuliaExt [2f4121a4-3b3a-5ce6-9c5e-1f2673ce168a]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule Plots with build ID ffffffff-ffff-ffff-000d-bf44fd8c83ef is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1948\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation since __precompile__(false). Importing IJuliaExt [2f4121a4-3b3a-5ce6-9c5e-1f2673ce168a].\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing packages\n",
+    "import Pkg\n",
+    "#Pkg.activate(@__DIR__)\n",
+    "#Pkg.instantiate()\n",
+    "#Pkg.add(\"JuMP\")\n",
+    "#Pkg.add(\"HiGHS\")\n",
+    "#Pkg.add(\"DataFrames\")\n",
+    "#Pkg.add(\"Plots\")\n",
+    "#Pkg.add(\"Measures\")\n",
+    "#Pkg.add(\"CSV\")\n",
+    "#Pkg.add(\"MarkdownTables\")\n",
+    "#Pkg.add(\"LinearAlgebra\")\n",
+    "\n",
+    "using JuMP\n",
+    "using HiGHS\n",
+    "using DataFrames\n",
+    "using Plots\n",
+    "using Measures\n",
+    "using CSV\n",
+    "using MarkdownTables\n",
+    "using LinearAlgebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Carbon Sequestration Rates\n",
+    "\n",
+    "m2 = 0.092903 #conversion to m^2\n",
+    "#Trees\n",
+    "oak_tree_cs = 0.593 #kg C/m2/year\n",
+    "ash_tree_cs = 5.903 #kgC/m2/year\n",
+    "maple_tree_cs = 0.202 #kg C/m2/year\n",
+    "\n",
+    "#Green Roof Systems\n",
+    "grass_cs = 0.2 #kg C/m2\n",
+    "prairie_mix_cs = 4.63 #kg C/m2\n",
+    "herb_garden_cs = 11.03 #kg C/m2\n",
+    "\n",
+    "##Costs\n",
+    "#Trees\n",
+    "oak_tree_cost = 42.51 #per tree WHEN YOU BUY 10\n",
+    "ash_tree_cost = 109.75 #per tree\n",
+    "maple_tree_cost = 19.99 #per tree\n",
+    "\n",
+    "#Green Roof Systems\n",
+    "installation_cost = 30*m2 #$/sqm\n",
+    "maintenance_cost = 1.50*m2 #$/sqm/year\n",
+    "grass_cost = 0.86*m2 #$/sqm\n",
+    "prairie_mix_cost = 0.03*m2 #$/sqm\n",
+    "herb_garden_cost = 9.50*m2 #$/sqm\n",
+    "\n",
+    "#Available areas\n",
+    "city_area = 2526871.39 #m^2\n",
+    "park_area = 1563736.94 #m^2\n",
+    "usable_roof_area = 0.5 #percent of city that is usable rooftop area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{aligned}\n",
+       "\\min\\quad & 3.0063410800000003 G_{4} + 2.92923159 G_{5} + 3.8090230000000003 G_{6} + 42.51 G_{1} + 109.75 G_{2} + 19.99 G_{3}\\\\\n",
+       "\\text{Subject to} \\quad & G_{1} \\geq 0\\\\\n",
+       " & G_{2} \\geq 0\\\\\n",
+       " & G_{3} \\geq 0\\\\\n",
+       " & G_{4} \\geq 0\\\\\n",
+       " & G_{5} \\geq 0\\\\\n",
+       " & G_{6} \\geq 0\\\\\n",
+       "\\end{aligned} $$"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "air_quality_model = Model(HiGHS.Optimizer)\n",
+    "@variable(air_quality_model, G[1:6]>=0) #area in meters squared\n",
+    "\n",
+    "fixed_cost = installation_cost*G[4] +  installation_cost*G[5] +  installation_cost*G[6] + maintenance_cost*G[4] + maintenance_cost*G[5] + maintenance_cost*G[6]\n",
+    "variable_cost = G[1]*oak_tree_cost + G[2]*ash_tree_cost + G[3]*maple_tree_cost + G[4]*grass_cost + G[5]*prairie_mix_cost + G[6]*herb_garden_cost\n",
+    "cost = fixed_cost + variable_cost\n",
+    "@objective(air_quality_model, Min, cost)\n",
+    "print(air_quality_model)"
    ]
   }
  ],
@@ -17,7 +248,10 @@
    "name": "julia-1.10"
   },
   "language_info": {
-   "name": "julia"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.10.5"
   }
  },
  "nbformat": 4,
