--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -202,8 +202,13 @@
     "\n",
     "#Available areas\n",
     "city_area = 2526871.39 #m^2\n",
+    "total_area = 4761611.96 #m^2\n",
     "park_area = 1563736.94 #m^2\n",
-    "usable_roof_area = 0.5 #percent of city that is usable rooftop area"
+    "usable_roof_area = 0.5 #percent of city that is usable rooftop area\n",
+    "\n",
+    "#Emission rates in Chicago\n",
+    "current_emission_level = 0.0517 * total_area #kg CO2 / year\n",
+    "percent_reduction_goal = 30"
    ]
   },
   {
@@ -237,7 +242,14 @@
     "variable_cost = G[1]*oak_tree_cost + G[2]*ash_tree_cost + G[3]*maple_tree_cost + G[4]*grass_cost + G[5]*prairie_mix_cost + G[6]*herb_garden_cost\n",
     "cost = fixed_cost + variable_cost\n",
     "@objective(air_quality_model, Min, cost)\n",
-    "print(air_quality_model)"
+    "print(air_quality_model)\n",
+    "\n",
+    "emissions_reduction = (G[1]*oak_tree_cs + G[2]*ash_tree_cs + G[3]*maple_tree_cs + G[4]*grass_cs + G[5]*prairie_mix_cs + G[6]*herb_garden_cs)*(44/12) #kg CO2 / year\n",
+    "new_total_emissions = current_emission_level - emissions_reduction\n",
+    "percent_reduction = (current_emission_level - new_total_emissions)/current_emission_level * 100\n",
+    "@constraint(air_quality_model, emisisons_constraint, percent_reduction >= percent_reduction_goal)\n",
+    "@constraint(air_quality_model, area_constraint_park, G[1]+G[2]+G[3] <= park_area)\n",
+    "@constraint(air_quality_model, area_constraint_rooftop, G[4]+G[5]+G[6] <= usable_roof_area)"
    ]
   }
  ],
