small fix - didnt change much

--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -11,35 +11,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/l3bc-final-project`\n",
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/bee4750/l3bc-final-project`\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/l3bc-final-project/Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/bee4750/l3bc-final-project/Manifest.toml`\n"
      ]
     }
    ],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,8 +78,9 @@
        "30"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +135,7 @@
       "  Matrix [3e-04, 1e+00]\n",
       "  Cost   [3e+00, 1e+02]\n",
       "  Bound  [0e+00, 0e+00]\n",
-      "  RHS    [4e-01, 2e+06]\n",
+      "  RHS    [3e+01, 2e+06]\n",
       "Presolving model\n",
       "3 rows, 6 cols, 12 nonzeros  0s\n",
       "3 rows, 6 cols, 12 nonzeros  0s\n",
@@ -142,17 +144,17 @@
       "Using EKK dual simplex solver - serial\n",
       "  Iteration        Objective     Infeasibilities num(sum)\n",
       "          0     0.0000000000e+00 Pr: 1(480) 0s\n",
-      "          2     3.7439732631e+05 Pr: 0(0) 0s\n",
+      "          1     6.9555655911e+03 Pr: 0(0) 0s\n",
       "Model   status      : Optimal\n",
-      "Simplex   iterations: 2\n",
-      "Objective value     :  3.7439732631e+05\n",
+      "Simplex   iterations: 1\n",
+      "Objective value     :  6.9555655911e+03\n",
       "HiGHS run time      :          0.00\n",
       "Optimal oak trees 0.0\n",
-      "Optimal ash trees 4753.871515937049\n",
+      "Optimal ash trees 0.0\n",
       "Optimal maple trees 0.0\n",
       "Optimal grass area 0.0\n",
       "Optimal prarie mix area 0.0\n",
-      "Optimal herb garden area 0.39999999999987423\n"
+      "Optimal herb garden area 1826.0760281776975\n"
      ]
     }
    ],
@@ -172,7 +174,7 @@
     "percent_reduction = (current_emission_level - new_total_emissions)/current_emission_level * 100\n",
     "@constraint(air_quality_model, emisisons_constraint, percent_reduction >= percent_reduction_goal)\n",
     "@constraint(air_quality_model, area_constraint_park, G[1]+G[2]+G[3] <= park_area)\n",
-    "@constraint(air_quality_model, area_constraint_rooftop, G[4]+G[5]+G[6] <= usable_roof_area)\n",
+    "@constraint(air_quality_model, area_constraint_rooftop, G[4]+G[5]+G[6] <= usable_roof_area*city_area)\n",
     "\n",
     "# Optimize the model\n",
     "optimize!(air_quality_model)\n",
