--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -146,9 +146,9 @@
     "optimize!(air_quality_model)\n",
     "\n",
     "# Display the optimized values\n",
-    "println(\"Optimal oak trees \", value.(G[1])*15)\n",
-    "println(\"Optimal ash trees \", value.(G[2])*15*m2)\n",
-    "println(\"Optimal maple trees \", value.(G[3])*40*m2)\n",
+    "println(\"Optimal oak trees \", value.(G[1])/15)\n",
+    "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
+    "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
     "println(\"Optimal prarie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))"
@@ -819,9 +819,9 @@
     "optimize!(air_quality_model)\n",
     "\n",
     "# Display the optimized values\n",
-    "println(\"Optimal oak trees \", value.(G[1])*15)\n",
-    "println(\"Optimal ash trees \", value.(G[2])*15*m2)\n",
-    "println(\"Optimal maple trees \", value.(G[3])*40*m2)\n",
+    "println(\"Optimal oak trees \", value.(G[1])/15)\n",
+    "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
+    "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
     "println(\"Optimal prarie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))\n",
@@ -902,9 +902,9 @@
     "optimize!(air_quality_model)\n",
     "\n",
     "# Display the optimized values\n",
-    "println(\"Optimal oak trees \", value.(G[1])*15)\n",
-    "println(\"Optimal ash trees \", value.(G[2])*15*m2)\n",
-    "println(\"Optimal maple trees \", value.(G[3])*40*m2)\n",
+    "println(\"Optimal oak trees \", value.(G[1])/15)\n",
+    "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
+    "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
     "println(\"Optimal prarie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))"
@@ -981,9 +981,9 @@
     "optimize!(air_quality_model)\n",
     "\n",
     "# Display the optimized values\n",
-    "println(\"Optimal oak trees \", value.(G[1])*15)\n",
-    "println(\"Optimal ash trees \", value.(G[2])*15*m2)\n",
-    "println(\"Optimal maple trees \", value.(G[3])*40*m2)\n",
+    "println(\"Optimal oak trees \", value.(G[1])/15)\n",
+    "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
+    "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
     "println(\"Optimal prarie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))"
@@ -1051,9 +1051,9 @@
     "\n",
     "optimize!(air_quality_model)\n",
     "\n",
-    "println(\"Optimal oak trees \", value.(G[1])*15)\n",
-    "println(\"Optimal ash trees \", value.(G[2])*15*m2)\n",
-    "println(\"Optimal maple trees \", value.(G[3])*40*m2)\n",
+    "println(\"Optimal oak trees \", value.(G[1])/15)\n",
+    "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
+    "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
     "println(\"Optimal prarie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))"
