spelling prairie right lol

--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -823,7 +823,7 @@
     "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
     "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
-    "println(\"Optimal prarie mix area \", value.(G[5]))\n",
+    "println(\"Optimal prairie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))\n",
     "\n",
     "display(value.(percent_reduction))"
@@ -915,7 +915,7 @@
     "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
     "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
-    "println(\"Optimal prarie mix area \", value.(G[5]))\n",
+    "println(\"Optimal prairie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))\n",
     "\n",
     "display(value.(percent_reduction))"
@@ -996,7 +996,7 @@
     "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
     "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
-    "println(\"Optimal prarie mix area \", value.(G[5]))\n",
+    "println(\"Optimal prairie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))"
    ]
   },
@@ -1062,11 +1062,12 @@
     "\n",
     "optimize!(air_quality_model)\n",
     "\n",
+    "# Display the optimized values\n",
     "println(\"Optimal oak trees \", value.(G[1])/15)\n",
     "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
     "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
-    "println(\"Optimal prarie mix area \", value.(G[5]))\n",
+    "println(\"Optimal prairie mix area \", value.(G[5]))\n",
     "println(\"Optimal herb garden area \", value.(G[6]))"
    ]
   },
