total tree change name

--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -956,12 +956,12 @@
       "Model   status      : Optimal\n",
       "Simplex   iterations: 2\n",
       "Objective value     :  3.4908324510e+04\n",
-      "HiGHS run time      :          0.00\n",
+      "HiGHS run time      :          0.01\n",
       "Optimal oak trees 0.0\n",
       "Optimal ash trees 0.0\n",
       "Optimal maple trees 420.79828961389836\n",
       "Optimal grass area 0.0\n",
-      "Optimal prarie mix area 0.0\n",
+      "Optimal prairie mix area 0.0\n",
       "Optimal herb garden area 958.0470057044428\n"
      ]
     }
@@ -986,7 +986,7 @@
     "@constraint(air_quality_model, emisisons_constraint, percent_reduction >= percent_reduction_goal)\n",
     "@constraint(air_quality_model, area_constraint_park, G[1]+G[2]+G[3] <= park_area)\n",
     "@constraint(air_quality_model, area_constraint_rooftop, G[4]+G[5]+G[6] <= city_area)\n",
-    "@constraint(air_quality_model, minimum_oak, G[1]+G[2]+G[3] >=0.001*park_area)\n",
+    "@constraint(air_quality_model, minimum_total_trees, G[1]+G[2]+G[3] >=0.001*park_area)\n",
     "\n",
     "# Optimize the model\n",
     "optimize!(air_quality_model)\n",
