oops i lied its this one

--- a/finalproject.ipynb
+++ b/finalproject.ipynb
@@ -11,12 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "ArgumentError: Package PkgG not found in current path.\n- Run `import Pkg; Pkg.add(\"PkgG\")` to install the PkgG package.",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package PkgG not found in current path.\n- Run `import Pkg; Pkg.add(\"PkgG\")` to install the PkgG package.",
+      "",
+      "Stacktrace:",
+      " [1] macro expansion",
+      "   @ ./loading.jl:1772 [inlined]",
+      " [2] macro expansion",
+      "   @ ./lock.jl:267 [inlined]",
+      " [3] __require(into::Module, mod::Symbol)",
+      "   @ Base ./loading.jl:1753",
+      " [4] #invoke_in_world#3",
+      "   @ ./essentials.jl:926 [inlined]",
+      " [5] invoke_in_world",
+      "   @ ./essentials.jl:923 [inlined]",
+      " [6] require(into::Module, mod::Symbol)",
+      "   @ Base ./loading.jl:1746"
+     ]
+    }
+   ],
    "source": [
     "# Importing packages\n",
-    "import Pkg\n",
+    "import PkgG\n",
     "# Pkg.activate(@__DIR__)\n",
     "# Pkg.instantiate()\n",
     "# Pkg.add(\"JuMP\")\n",
@@ -1009,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1021,26 +1044,36 @@
       "  Matrix [1e+00, 1e+02]\n",
       "  Cost   [6e-04, 3e-02]\n",
       "  Bound  [0e+00, 0e+00]\n",
-      "  RHS    [1e+05, 2e+06]\n",
+      "  RHS    [1e+04, 2e+06]\n",
       "Presolving model\n",
       "3 rows, 6 cols, 12 nonzeros  0s\n",
       "0 rows, 0 cols, 0 nonzeros  0s\n",
       "Presolve : Reductions: rows 0(-3); columns 0(-6); elements 0(-12) - Reduced to empty\n",
       "Solving the original LP from the solution after postsolve\n",
       "Model   status      : Optimal\n",
-      "Objective value     :  1.0218231368e+03\n",
+      "Objective value     :  1.0017813632e+02\n",
       "HiGHS run time      :          0.00\n",
       "Optimal oak trees 0.0\n",
       "Optimal ash trees 0.0\n",
       "Optimal maple trees 0.0\n",
       "Optimal grass area 0.0\n",
-      "Optimal prarie mix area 0.0\n",
-      "Optimal herb garden area 33607.2452174744\n"
+      "Optimal prairie mix area 0.0\n",
+      "Optimal herb garden area 3294.808143715593\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "100.17813631569597"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "budget = 128010.77\n",
+    "# budget = 128010.77\n",
+    "budget = 12550\n",
     "\n",
     "air_quality_model = Model(HiGHS.Optimizer)\n",
     "@variable(air_quality_model, G[1:6]>=0) #area in meters squared\n",
@@ -1068,7 +1101,8 @@
     "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
     "println(\"Optimal grass area \", value.(G[4]))\n",
     "println(\"Optimal prairie mix area \", value.(G[5]))\n",
-    "println(\"Optimal herb garden area \", value.(G[6]))"
+    "println(\"Optimal herb garden area \", value.(G[6]))\n",
+    "display(value.(percent_reduction))"
    ]
   },
   {
@@ -1595,6 +1629,54 @@
     "# Plot the results\n",
     "plot(budget_constraints, optimal_reduction, xlabel=\"Budget (USD)\", ylabel=\"Optimal Reduction (%)\",\n",
     "    title=\"Optimal CO2 emissions reduction vs Budget\", lw=2, marker=:circle, legend=false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient ranges:\n",
+      "  Matrix [6e-04, 1e+00]\n",
+      "  Cost   [3e+00, 1e+02]\n",
+      "  Bound  [0e+00, 0e+00]\n",
+      "  RHS    [3e+01, 2e+06]\n",
+      "Solving LP without presolve, or with basis, or unconstrained\n",
+      "Model   status      : Optimal\n",
+      "Objective value     :  3.4908324510e+04\n",
+      "HiGHS run time      :          0.00\n",
+      "Optimal oak trees 0.0\n",
+      "Optimal ash trees 0.0\n",
+      "Optimal maple trees 420.79828961389836\n",
+      "Optimal grass area 0.0\n",
+      "Optimal prairie mix area 0.0\n",
+      "Optimal herb garden area 958.0470057044428\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "optimize!(air_quality_model)\n",
+    "\n",
+    "println(\"Optimal oak trees \", value.(G[1])/15)\n",
+    "println(\"Optimal ash trees \", value.(G[2])/(15*m2))\n",
+    "println(\"Optimal maple trees \", value.(G[3])/(40*m2))\n",
+    "println(\"Optimal grass area \", value.(G[4]))\n",
+    "println(\"Optimal prairie mix area \", value.(G[5]))\n",
+    "println(\"Optimal herb garden area \", value.(G[6]))\n",
+    "display(value.(percent_reduction))"
    ]
   }
  ],
